--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <div class="block"></div>
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+
+                <a href="#" class="header__logo">
+                    <img src="icons/running-man-2-64.png" alt="">
+                </a>
+
+                <div class="header__official">
+                    Официальный представитель
+                    <p>Garmin, Polar, Suunto</p>
+                </div>
+
+                <div class="header__phone">
+                    <a href="tel:+74999228974">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+            
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h1 class="promo__subheader">с учётом Вашего уровня подготовки</h1>
+            </div>
+
+            <div class="promo__icons">
+                <div class="promo__icon">
+                    <img src="icons/019_timer_time_stopwatch_2-64.png" alt="timer">
+                    <p>Время подбора:
+                    10 минут</p>
+                </div>
+
+                <div class="promo__icon">
+                    <img src="icons/app-08-hand-cart-64.png" alt="cargo">
+                    <p>Бесплатная
+                    доставка</p>
+                </div>
+
+                <div class="promo__icon">
+                    <img src="icons/messages-64.png" alt="message">
+                    <p>Ответим
+                    на все вопросы</p>
+                </div>
+            </div>
+
+            <div class="promo__button">
+                <button class="button">заказать кОНСУЛЬТАЦИЮ</button>
+            </div>
+
+            <div class="promo__consultation">
+                <span>или</span>
+                <a href="">ПЕРЕЙТИ В КАТАЛОГ</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
