added media for promo and second section

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
             <header class="header">
 
                 <a href="#" class="header__logo">
-                    <img src="icons/running-man-2-64.png" alt="">
+                    <img src="icons/running-man-2-64.png" alt="" class="running-man-2-64">
                 </a>
 
                 <div class="header__official">
                     Официальный представитель
-                    <p>Garmin, Polar, Suunto</p>
+                    <p class="garmin">Garmin, Polar, Suunto</p>
                 </div>
 
                 <div class="header__phone">
@@ -59,6 +59,56 @@
             <div class="promo__consultation">
                 <span>или</span>
                 <a href="">ПЕРЕЙТИ В КАТАЛОГ</a>
+            </div>
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="container">
+            <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <div class="advantages__icon">
+                        <img src="icons/cup.png" alt="">
+                    </div>
+                    <div class="advantages__subtitle">
+                        Делимся опытом
+                    </div>
+                    <div class="advantages__title">
+                        Наши сотрудники всегда готовы <br>
+                        поделиться своим опытом, <br>
+                        так как сами бегают полумарафоны, <br>
+                        переплыли Босфор, готовятся к <br>
+                        соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__icon">
+                        <img src="icons/heart.png" alt="">
+                    </div>
+                    <div class="advantages__subtitle">
+                        Заботимся о здоровье
+                    </div>
+                    <div class="advantages__title">
+                        Мы работаем для того, <br>
+                        чтобы Ваши занятия спортом шли на <br>
+                        пользу Вашему здоровью и были в <br>
+                        радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__icon">
+                        <img src="icons/shoe.png" alt="">
+                    </div>
+                    <div class="advantages__subtitle">
+                        Учим бегать
+                    </div>
+                    <div class="advantages__title">
+                        Помогаем с обучением <br>
+                        правильной технике бега! <br>  
+                        Дружим с крупнейшей школой бега в <br>
+                        России - I LOVE RUNNING.
+                    </div>
+                </div>
             </div>
         </div>
     </div>
