--- a/index.html
+++ b/index.html
@@ -144,6 +144,41 @@
               </div>
         </div>
     </section>
+
+    <section class="catalog">
+        <div class="container">
+            <h2 class="title">КАТАЛОГ ПУЛЬСОМЕТРОВ</h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab catalog__tab_active"><div>ДЛЯ ФИТНЕСА</div></li>
+                <li class="catalog__tab"><div>ДЛЯ БЕГА</div</li>
+                <li class="catalog__tab"><div>ДЛЯ ТРИАТЛОНА</div></li>
+            </ul>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                    <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                    <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                    <div class="catalog-item__about">
+                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog-item"></div>
+                <div class="catalog-item"></div>
+                <div class="catalog-item"></div>
+                <div class="catalog-item"></div>
+                <div class="catalog-item"></div>
+            </div>
+        </div>
+    </section>
+    
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.js"></script>
