--- a/index.html
+++ b/index.html
@@ -153,13 +153,24 @@
                 <li class="catalog__tab"><div>ДЛЯ БЕГА</div</li>
                 <li class="catalog__tab"><div>ДЛЯ ТРИАТЛОНА</div></li>
             </ul>
-            <div class="catalog__content">
+            <div class="catalog__content catalog__content_active">
                 <div class="catalog-item">
-                    <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
-                    <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
-                    <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
-                    <div class="catalog-item__about">
-                        <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">НАЗАД</a>
+                        </ul>
                     </div>
                     <hr>
                     <div class="catalog-item__footer">
@@ -170,11 +181,226 @@
                         <button class="button buy-button">КУПИТЬ</button>
                     </div>
                 </div>
-                <div class="catalog-item"></div>
-                <div class="catalog-item"></div>
-                <div class="catalog-item"></div>
-                <div class="catalog-item"></div>
-                <div class="catalog-item"></div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">НАЗАД</a>  
+                        </ul>                      
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__link">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__link">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+                <div class="catalog-item">
+                    <div class="catalog-item__wrapper">
+                        <div class="catalog-item__content catalog-item__content_active">
+                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
+                            <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
+                            <div class="catalog-item__about">
+                                <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                        <ul class="catalog-item__list">
+                            <li class="catalog-item__element">Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li class="catalog-item__element">Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li class="catalog-item__element">Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li class="catalog-item__element">Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__link">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer">
+                        <div class="catalog-item__prices">
+                            <p class="catalog-item__old-price">4 750 руб.</p>
+                            <p class="catalog-item__new-price">4 500 руб.</p>
+                        </div>
+                        <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
