--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -184,7 +184,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -211,7 +211,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -238,7 +238,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -265,7 +265,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -292,7 +292,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -321,7 +321,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -350,7 +350,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -377,7 +377,7 @@
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
-                            <img src="img/pulsometr.jpg" alt="" class="catalog-item__img">
+                            <img src="img/pulsometr.jpg" alt="pulsometr" class="catalog-item__img">
                             <p class="catalog-item__subtitle">Пульсометр Polar FT1</p>
                             <p class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</p>
                             <div class="catalog-item__about">
@@ -399,6 +399,59 @@
                             <p class="catalog-item__new-price">4 500 руб.</p>
                         </div>
                         <button class="button buy-button">КУПИТЬ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="reviews">
+        <div class="container">
+            <h2 class="reviews__title">ОТЗЫВЫ КЛИЕНТОВ</h2>
+            <div class="reviews__item">
+                <img src="icons/first-person.png" alt="first-person">
+                <div class="reviews__text">
+                    <div class="reviews__text_name">Ирина Иванченко</div>
+                    <div class="reviews__text_marathon">2 полумарафона</div>
+                    <div class="reviews__text_descr">
+                        Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали <br> пульсометр, который подошёл именно под мои цели и финансовые возможности. <br>
+                        Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. <br> <br>
+                        Новые цели - новый гаджет! <br> <br>
+                        Спасибо, RunSmart!
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="reviews__item">
+                <img src="icons/second-person.png" alt="second-person">
+                <div class="reviews__text">
+                    <div class="reviews__text_name">Иван Сёмочкин</div>
+                    <div class="reviews__text_marathon">1 полумарафона</div>
+                    <div class="reviews__text_descr">
+                        Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>
+                        Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели <br> 
+                        первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы <br>
+                        анатомии, составили план тренировок на месяц вперёд. <br> <br> 
+                        С ними подготовился к своему первому полумарафону! Спасибо!!!
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="reviews__item">
+                <img src="icons/third-person.png" alt="third-person">
+                <div class="reviews__text">
+                    <div class="reviews__text_name">Юлия Дашкина</div>
+                    <div class="reviews__text_marathon">2 полумарафона</div>
+                    <div class="reviews__text_descr">
+                        Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось <br> 
+                        тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и <br>
+                        решила попробовать. 
+                        <br><br>
+                        Позвонила, ребята поинтересовались моими целями и подобрали очень интересный <br>
+                        вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 <br>
+                        полумарафона и несколько более коротких забегов и не намерена останавливаться! 
+                        <br><br>
+                        Спасибо!!!
                     </div>
                 </div>
             </div>
