--- a/index.html
+++ b/index.html
@@ -458,6 +458,25 @@
         </div>
     </section>
     
+    <footer class="footer">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A698b62c67cb8317f2c169bb0fde98851995b88e36683c66aec7dea8ddaf4ea2e&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+        <div class="footer__info">
+            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:84999228974" class="footer__tel">8 (499) 922-89-74</a>
+            <div class="footer__icons">
+                <div class="footer__circle">
+                    <a href="#"><img src="icons/facebook.png" alt="facebook"></a>
+                </div>
+                <div class="footer__circle">
+                    <a href="#"><img src="icons/instagram.png" alt="instagram"></a>
+                </div>
+                <div class="footer__circle">
+                    <a href="#"><img src="icons/pinterest.png" alt="pinterest"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.js"></script>
